--- a/site_v3 files/css/style.css
+++ b/site_v3 files/css/style.css
@@ -318,6 +318,17 @@ float: left;
 
 /*----------------------------------------  SLIDES  */
 
+/*----------------------------------------  Countdown  */
+
+#student-time{
+
+	width:49%;
+	max-width: 400px;
+	position: left;
+	z-index: 0
+}
+
+
 /*----------------------------------------  blackboard  */
 
 #blackboard{
@@ -345,14 +356,14 @@ float: left;
 /*----------------------------------------  Big-Debt  */
 
 #big-debt{
-	box-shadow: 0px 10px 20px -2px black;
-	z-index: 1;
+	
 }
 
 /*----------------------------------------  That's enough  */
 
 #thats-enough{
 	background-image: url('../img/blackboard.jpg');
+	box-shadow: 0px 10px 20px -2px black;
 }
 
 /*---------------------------------------- Warren  */
@@ -382,6 +393,8 @@ float: left;
 	max-width: 500px;
 	text-shadow: 0px 2px 9px rgba(0,0,0,0.71);
 }
+
+
 
 /*---------------------------------------- the-plan  */
 
