--- a/site_v3 files/css/style.css
+++ b/site_v3 files/css/style.css
@@ -30,10 +30,14 @@ body {
 	color: #444;
 }
 
-button, input{
+button, input[type=text]{
 	font-family: "Open Sans", Arial, sans-serif !important;
 	color: #444;
 	border-radius: 5px;
+}
+
+input[type=text]:a{
+	border-color: red;
 }
 
 button, html input[type="button"], input[type="reset"], input[type="submit"]{
@@ -210,7 +214,8 @@ code {
 #star{
 	display: inline-block;
 	color: white;
-	font-size: small;
+	font-size: 14px;
+	font-size: 1.4rem;
 	vertical-align: middle;
 }
 
@@ -395,8 +400,26 @@ float: left;
 }
 
 
+/*---------------------------------------- Quote  */
+
+#warren-cutout{
+	max-width: 50%;
+}
+
+#right-quote{
+	width:100% !important;
+}
 
 /*---------------------------------------- the-plan  */
+
+#the-plan{
+
+}
+
+#the-fed{
+	width: 10%;
+	vertical-align: middle;
+}
 
 #plan1{
 	text-align: left;
