--- a/site_v3 files/css/style.css
+++ b/site_v3 files/css/style.css
@@ -204,7 +204,7 @@ code {
 	top: 0;
 	left: 0;
 	z-index: 10;
-	background: #3379b5;
+	background: #073664;
 	border-bottom: solid 3px #6ca5d9;
 	padding: 5px;
 	padding: .5rem;
@@ -217,6 +217,16 @@ code {
 	font-size: 14px;
 	font-size: 1.4rem;
 	vertical-align: middle;
+	opacity: 1;
+	-webkit-transition: opacity 2s ease-in;
+    -moz-transition: opacity 2s ease-in;
+    -o-transition: opacity 2s ease-in;
+    -ms-transition: opacity 2s ease-in;
+    transition: opacity 2s ease-in;
+}
+
+#star .load{
+	opacity: 1;
 }
 
 #instructions {
@@ -323,6 +333,36 @@ float: left;
 
 /*----------------------------------------  SLIDES  */
 
+/*----------------------------------------  Scroll-down  */
+
+#scroll-down{
+	width:10%;
+	float: left;
+	padding-left: 2%;
+	position: relative;
+}
+
+#scroll-down:hover{
+	width:10%;
+	opacity: .5;
+	cursor: pointer;
+}
+
+/*----------------------------------------  Scroll-down  */
+#twitter{
+	width:10%;
+	float: right;
+	padding-right: 2%;
+	position: relative;
+}
+
+#twitter:hover{
+	width:10%;
+	opacity: .5;
+	cursor: pointer;
+}
+
+
 /*----------------------------------------  Countdown  */
 
 #student-time{
@@ -390,7 +430,8 @@ float: left;
 
 #house{
 	background: url('../img/house-bg.png') no-repeat center;
-	background-size: 100%;
+	background-size: 110%;
+	box-shadow: 0px 10px 20px -2px black;
 }
 
 #house-text{
@@ -454,7 +495,7 @@ float: left;
 
 
 
-#title {
+#intro {
 	line-height: .8;
 }
 
