--- a/site_v3 files/m/css/style.css
+++ b/site_v3 files/m/css/style.css
@@ -101,13 +101,13 @@ h2 {
 }
 
 h3 {
-	font-size: 30px;
-	font-size: 3rem;
+	font-size: 70px;
+	font-size: 7rem;
 	font-style: italic;
 	line-height: 35px;
-	line-height: 3.5rem;
+	line-height: 7rem;
 	font-weight: 200;
-	max-width: 500px;
+	max-width: 80%;
 	padding-bottom: 30px;
 	padding-bottom: 3rem;
 	text-align: center;
@@ -203,6 +203,11 @@ code {
 	min-height: 300px;
 	min-height: 30rem;
 }
+
+.slide-header > h1{
+	vertical-align: middle;
+}
+
 /*----------------------------------------  HEADER  */
 
 
@@ -355,7 +360,8 @@ float: left;
 #scroll-down-first{
 	width:30%;
 	float: left;
-	padding-left: 10%;
+	padding-left: 2%;
+	padding-bottom: 5%;
 	position: relative;
 }
 
@@ -386,8 +392,8 @@ float: left;
 #twitter-first{
 	width:30%;
 	float: right;
-	padding-right: 10%;
-	padding-bottom: 10%;
+	padding-right: 2%;
+	padding-bottom: 5%;
 	position: relative;
 }
 
@@ -414,6 +420,8 @@ float: left;
 #blackboard{
 	background-image: url('../img/blackboard.jpg');
 	box-shadow: 0px 10px 20px -2px black;
+	background-size: 100%;
+	background-repeat: no-repeat;
 }
 
 .bb-text{
@@ -433,6 +441,10 @@ float: left;
 	text-align: left !important;
 }
 
+.graph-img{
+	width: 49%;
+}
+
 /*----------------------------------------  Big-Debt  */
 
 #big-debt{
@@ -444,6 +456,8 @@ float: left;
 #thats-enough{
 	background-image: url('../img/blackboard.jpg');
 	box-shadow: 0px 10px 20px -2px black;
+	background-size: 100%;
+	background-repeat: no-repeat;
 }
 
 /*---------------------------------------- Warren  */
@@ -461,7 +475,7 @@ float: left;
 	font-weight: 200;
 	margin-left:auto;
 	margin-right: auto;
-	max-width: 70%;
+	max-width: 80%;
 }
 
 /*----------------------------------------  House  */
@@ -483,7 +497,7 @@ float: left;
 /*---------------------------------------- Quote  */
 
 #warren-cutout{
-	max-width: 50%;
+	width: 50%;
 }
 
 #right-quote{
